fixed buttons on mobile

--- a/src/Button.css
+++ b/src/Button.css
@@ -14,6 +14,9 @@
   transition: all 0.2s;
   position: relative;
   background-color: black;
+  -webkit-appearance: none;
+  min-width: 62px;
+  min-height: 40px;
 }
 
 .custom:hover {
